--- a/_pages/portfolio.html
+++ b/_pages/portfolio.html
@@ -8,7 +8,51 @@ author_profile: true
 {% include base_path %}
 
 
-{% for post in site.portfolio %}
-  {% include archive-single.html %}
-{% endfor %}
+<head>
+  <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1">
+  <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
+</head>
+
+<body>
+  <script type="text/javascript" src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+  <script type="text/javascript">
+    $(document).ready(function() {
+      var heights = $(".column").map(function() {
+          return $(this).height();
+        }).get(),
+        maxHeight = Math.max.apply(null, heights);
+      $(".column").height(maxHeight);
+    });
+  </script>
+  <div class="container" style="width: 100%; height: 100vh;">
+    <div class="row text-center">
+      <h5>Label Key</h5>
+      <span class="label label-info">Language</span>
+      <span class="label label-success">Library</span>
+      <span class="label label-danger">API</span>
+      <span class="label label-warning">Hardware</span>
+      <span class="label label-primary">Life Skills</span>
+    </div>
+    <hr>
+      <div class="row">
+      <div class="col-md-12 column project-right">
+        <h4 class="hackname">Traffic Count Detection</h4>
+        <h5 class="link"><a href="https://github.com/zhiaozhou/Vehicle_Count_Deep_Learning"><i class="fa fa-github"></i> GitHub</a></h5>
+        <h5 class="link"><a href="https://zhiaozhou.github.io/portfolio/vehicle_count/"><i class="fa fa-book"></i> Original Paper</a></h5>
+        <hr>
+        <p>In this project, a object detector is trained using Faster RCNN with Inception Resnet V2 that helps measure traffic density using existing traffic cameras in New York City.<br><img src="https://zhiaozhou.github.io/images/vehicle/vehicle_example2.gif"></p>
+        <span class="label label-warning"><i class="fa fa-code"></i> Arduino</span>
+        <span class="label label-info"><i class="fa fa-street-view"></i> AVR-C</span>
+      </div>
+    </div>
+
+
+    <hr>
+  </div>
+</body>
 
