--- a/_pages/portfolio.html
+++ b/_pages/portfolio.html
@@ -38,19 +38,34 @@ author_profile: true
       <span class="label label-warning">Hardware</span>
       <span class="label label-primary">Life Skills</span>
     </div>
-    <hr>
+    <hr style="border:none;border-top:10px groove skyblue;">
+    
       <div class="row">
       <div class="col-md-12 column project-right">
         <h4 class="hackname">Traffic Count Detection</h4>
         <h5 class="link"><a href="https://github.com/zhiaozhou/Vehicle_Count_Deep_Learning"><i class="fa fa-github"></i> GitHub</a></h5>
         <h5 class="link"><a href="https://zhiaozhou.github.io/portfolio/vehicle_count/"><i class="fa fa-book"></i> Original Paper</a></h5>
         <hr>
-        <p>In this project, a object detector is trained using Faster RCNN with Inception Resnet V2 that helps measure traffic density using existing traffic cameras in New York City.<br><img src="https://zhiaozhou.github.io/images/vehicle/vehicle_example2.gif"></p>
-        <span class="label label-warning"><i class="fa fa-code"></i> Arduino</span>
-        <span class="label label-info"><i class="fa fa-street-view"></i> AVR-C</span>
+        <p><b>In this project, a object detector is trained using Faster RCNN with Inception Resnet V2 that helps measure traffic density using existing traffic cameras in New York City.</b><hr><img src="https://zhiaozhou.github.io/images/vehicle/vehicle_example2.gif"></p>
+        <span class="label label-info"><i class="fa fa-code"></i> Python</span>
+        <span class="label label-success"><i class="fa fa-google"></i> Tensorflow</span>
+        <span class="label label-success"><i class="fa fa-eye"></i> OpenCV</span>
       </div>
     </div>
 
+      <hr style="height:2px;border:none;background: #00a6b6;">
+      <div class="row">
+      <div class="col-md-12 column project-right">
+        <h4 class="hackname">Overlapping Object Segmentation Using CapsNet</h4>
+        <h5 class="link"><a href="https://github.com/zhiaozhou/DL_Project_CapsNet"><i class="fa fa-github"></i> GitHub</a></h5>
+        <h5 class="link"><a href="https://zhiaozhou.github.io/portfolio/capsnet/"><i class="fa fa-book"></i> Original Paper</a></h5>
+        <hr>
+        <p><b>This project is aimed to train a CapsNet which was recently published by Geoffrey Hinton in 2017, in order to test its performance on overlapping digits segmentation.</b><hr><img src="https://zhiaozhou.github.io/images/capsnet/demo_py.png"></p>
+        <span class="label label-info"><i class="fa fa-code"></i> Python</span>
+        <span class="label label-success"><i class="fa fa-google"></i> Tensorflow</span>
+        <span class="label label-success"><i class="fa fa-eye"></i> OpenCV</span>
+      </div>
+    </div>
 
     <hr>
   </div>
