--- a/_pages/portfolio.html
+++ b/_pages/portfolio.html
@@ -46,7 +46,7 @@ author_profile: true
         <h5 class="link"><a href="https://github.com/zhiaozhou/Vehicle_Count_Deep_Learning"><i class="fa fa-github"></i> GitHub</a></h5>
         <h5 class="link"><a href="https://zhiaozhou.github.io/portfolio/vehicle_count/"><i class="fa fa-book"></i> Original Paper</a></h5>
         <hr>
-        <p><b>In this project, a object detector is trained using Faster RCNN with Inception Resnet V2 that helps measure traffic density using existing traffic cameras in New York City.</b><hr><img src="https://zhiaozhou.github.io/images/vehicle/vehicle_example2.gif"></p>
+        <p><b>In this project, a object detector is trained using Faster RCNN with Inception Resnet V2 that helps measure traffic density using existing traffic cameras in New York City.</b><hr><img src="https://zhiaozhou.github.io/images/vehicle/vehicle_example2.gif" alt="Drawing" style="width: 450px;" width="300"/></p>
         <span class="label label-info"><i class="fa fa-code"></i> Python</span>
         <span class="label label-success"><i class="fa fa-google"></i> Tensorflow</span>
         <span class="label label-success"><i class="fa fa-eye"></i> OpenCV</span>
