--- a/_pages/portfolio.html
+++ b/_pages/portfolio.html
@@ -18,6 +18,10 @@ author_profile: true
   <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 
+<style> 
+.col-md-12{ line-height:20px}/* css 注释说明：设置行距行高22px */ 
+</style> 
+
 <body>
   <script type="text/javascript" src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
   <script type="text/javascript">
@@ -41,12 +45,12 @@ author_profile: true
     <hr style="border:none;border-top:10px groove skyblue;">
     
     <div class="row">
-      <div class="col-md-12 column project-right">
+      <div class="col-md-12">
         <h4 class="hackname">Traffic Count Detection</h4>
         <h5 class="link"><a href="https://github.com/zhiaozhou/Vehicle_Count_Deep_Learning"><i class="fa fa-github"></i> GitHub</a></h5>
         <h5 class="link"><a href="https://zhiaozhou.github.io/portfolio/vehicle_count/"><i class="fa fa-book"></i> Original Paper</a></h5>
         <hr>
-        <p><b>In this project, a object detector is trained using Faster RCNN with Inception Resnet V2 that helps measure traffic density using existing traffic cameras in New York City.</b><hr><img src="https://zhiaozhou.github.io/images/vehicle/vehicle_example2.gif" alt="Drawing" style="width: 450px;" width="300"/></p>
+        <p><b>In this project, a object detector is trained using Faster RCNN with Inception Resnet V2 that helps measure traffic density using existing traffic cameras in New York City.</b><hr><img src="https://zhiaozhou.github.io/images/vehicle/vehicle_example2.gif" height="420"></p>
         <span class="label label-info"><i class="fa fa-code"></i> Python</span>
         <span class="label label-success"><i class="fa fa-google"></i> Tensorflow</span>
         <span class="label label-success"><i class="fa fa-eye"></i> OpenCV</span>
@@ -55,7 +59,7 @@ author_profile: true
 
     <hr style="height:2px;border:none;background: #00a6b6;">
     <div class="row">
-      <div class="col-md-12 column project-right">
+      <div class="col-md-12">
         <h4 class="hackname">Overlapping Object Segmentation Using CapsNet</h4>
         <h5 class="link"><a href="https://github.com/zhiaozhou/DL_Project_CapsNet"><i class="fa fa-github"></i> GitHub</a></h5>
         <h5 class="link"><a href="https://zhiaozhou.github.io/portfolio/capsnet/"><i class="fa fa-book"></i> Original Paper</a></h5>
