--- a/_pages/project.html
+++ b/_pages/project.html
@@ -32,7 +32,8 @@ author_profile: true
   </script>
   <div class="container" style="width: 100%; height: 100vh;">
     <div class="row text-center">
-      <h5>Label Key</h5>
+      <strong>Label Key</strong>
+      <br>
       <span class="label label-info">Language</span>
       <span class="label label-success">Library</span>
       <span class="label label-danger">API</span>
