--- a/_pages/year-archive.html
+++ b/_pages/year-archive.html
@@ -17,3 +17,5 @@ redirect_from:
   {% endif %}
   {% include archive-single.html %}
 {% endfor %}
+
+<script src="http://zhiaozhou.github.io/assets/js/mouse.js"></script>
