--- a/_pages/project.html
+++ b/_pages/project.html
@@ -4,17 +4,17 @@ title: "Projects"
 permalink: /projects/
 author_profile: true
 ---
+<!DOCTYPE html>
+<html>
 
-<head>
-  <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1">
-  <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <link rel="icon" href="favicon.ico" type="image/x-icon">
-  <script src="http://zhiaozhou.github.io/assets/js/mouse.js"></script>
-</head>
+<meta http-equiv="content-type" content="text/html; charset=UTF-8">
+<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1">
+<link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<link rel="icon" href="favicon.ico" type="image/x-icon">
+
 
 <style> 
 .col-md-12{ line-height:20px}/* css 注释说明：设置行距行高22px */ 
@@ -73,4 +73,5 @@ author_profile: true
     <hr>
   </div>
 </body>
-
+</html>
+<script src="http://zhiaozhou.github.io/assets/js/mouse.js"></script>
