--- a/_pages/project.html
+++ b/_pages/project.html
@@ -6,33 +6,12 @@ author_profile: true
 ---
 <!DOCTYPE html>
 <html>
-
-
-
 <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-
-
-
-
 <script src="http://zhiaozhou.github.io/assets/js/mouse.js"></script>
 
-<style> 
-.col-md-12{ line-height:20px}/* css 注释说明：设置行距行高22px */ 
-</style> 
-
 <body>
-  <script type="text/javascript" src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-  <script type="text/javascript">
-    $(document).ready(function() {
-      var heights = $(".column").map(function() {
-          return $(this).height();
-        }).get(),
-        maxHeight = Math.max.apply(null, heights);
-      $(".column").height(maxHeight);
-    });
-  </script>
-  <div class="container" style="width: 100%; height: 100vh;">
+  <div class="container" style="width: 100%; height: 70vh;">
     <div class="row text-center">
       <strong>Label Key</strong>
       <br>
@@ -56,8 +35,12 @@ author_profile: true
         <span class="label label-success"><i class="fa fa-eye"></i> OpenCV</span>
       </div>
     </div>
+  </div>
+</body>
+<hr style="height:2px;border:none;background: #00a6b6;">
 
-    <hr style="height:2px;border:none;background: #00a6b6;">
+<body>
+  <div class="container" style="width: 100%; height: 100vh;">
     <div class="row">
       <div class="col-md-12">
         <h4 class="hackname">Overlapping Object Segmentation Using CapsNet</h4>
@@ -70,8 +53,6 @@ author_profile: true
         <span class="label label-success"><i class="fa fa-eye"></i> OpenCV</span>
       </div>
     </div>
-
-    <hr>
   </div>
 </body>
 </html>
