--- a/_pages/project.html
+++ b/_pages/project.html
@@ -4,14 +4,14 @@ title: "Projects"
 permalink: /projects/
 author_profile: true
 ---
-<script src="http://zhiaozhou.github.io/assets/js/mouse.js"></script>
 <!DOCTYPE html>
 <html>
+<script src="http://zhiaozhou.github.io/assets/js/mouse.js"></script>
 <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
 <body>
-  <div class="container" style="width: 100%; height: 70vh;">
+  <div class="container" style="width: 100%; height: 100vh;">
     <div class="row text-center">
       <strong>Label Key</strong>
       <br>
@@ -29,16 +29,17 @@ author_profile: true
         <h5 class="link"><a href="https://github.com/zhiaozhou/Vehicle_Count_Deep_Learning"><i class="fa fa-github"></i> GitHub</a></h5>
         <h5 class="link"><a href="https://zhiaozhou.github.io/projects/vehicle_count/"><i class="fa fa-book"></i> Original Paper</a></h5>
         <hr>
-        <p><b>In this project, a object detector is trained using Faster RCNN with Inception Resnet V2 that helps measure traffic density using existing traffic cameras in New York City.</b><hr><img src="https://zhiaozhou.github.io/images/vehicle/vehicle_example2.gif" width="400"></p>
+        <p><b>In this project, a object detector is trained using Faster RCNN with Inception Resnet V2 that helps measure traffic density using existing traffic cameras in New York City.</b></p>
+        <hr>
+        <img src="https://zhiaozhou.github.io/images/vehicle/vehicle_example2.gif" width = "600">
+        <br>
         <span class="label label-info"><i class="fa fa-code"></i> Python</span>
         <span class="label label-success"><i class="fa fa-google"></i> Tensorflow</span>
         <span class="label label-success"><i class="fa fa-eye"></i> OpenCV</span>
       </div>
     </div>
-  </div>
 </body>
 <hr style="height:2px;border:none;background: #00a6b6;">
-
 <body>
   <div class="container" style="width: 100%; height: 100vh;">
     <div class="row">
