--- a/_pages/project.html
+++ b/_pages/project.html
@@ -4,8 +4,7 @@ title: "Projects"
 permalink: /projects/
 author_profile: true
 ---
-<!DOCTYPE html>
-<html>
+
 <script src="http://zhiaozhou.github.io/assets/js/mouse.js"></script>
 <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -38,9 +37,8 @@ author_profile: true
         <span class="label label-success"><i class="fa fa-eye"></i> OpenCV</span>
       </div>
     </div>
-</body>
+  </div>
 <hr style="height:2px;border:none;background: #00a6b6;">
-<body>
   <div class="container" style="width: 100%; height: 100vh;">
     <div class="row">
       <div class="col-md-12">
@@ -56,4 +54,3 @@ author_profile: true
     </div>
   </div>
 </body>
-</html>
